# facturador_appserver

./: .gitignore  Cargo.toml  Rocket.toml  facturador_appserver.code-workspace
src/: conf.rs  init_check.rs  main.rs
src/assets/: config-sample.json  wsfev1.wsdl  zeep_wsfev1.rs
src/aux_func/: mod.rs  print.rs  time_serde.rs
src/endpoints/: cliente.rs  facturar.rs  mod.rs  producto.rs  producto_grupo.rs
src/model/: mod.rs
src/model/afip/: afip_sign_cache.rs  dummy-new.rs  dummy.rs  mod.rs  soap_util.rs  utils_soap.rs  wsfev1.rs
src/model/afip/soap_utils/: afip_request.rs  afip_signin.rs  arma_login_ticket_request.rs  cms_sign.rs  get_soap_tag.rs  get_xml_tag.rs  mod.rs  soap_fault.rs
src/model/afip/wsfev1/: constants.rs  fe_cae_solicitar.rs  fe_comp_ultimo_autorizado.rs  fecaesolicitar.rs  fedummy.rs  mod.rs
src/model/propio/: afip_sign_cache.rs  cliente.rs  mod.rs  producto.rs  producto_grupo.rs
src/model/propio/factura/: factura.rs  factura_head.rs  factura_producto.rs  factura_transmision.rs  mod.rs
src/types/: afip_auth.rs  cliente.rs  factura.rs  factura_producto.rs  medio_pago.rs  mod.rs  producto.rs  producto_grupo.rs
