[package]
name = "facturador_appserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "*",features = ["json"]}
chrono = { version = "*", features = ["serde", "rustc-serialize"] }
uuid = "*"
rocket_db_pools = { version = "*", features = ["sqlx_postgres"] }
reqwest = {version = "*", features = ["json"] }
yaserde = "*"
yaserde_derive = "*"
log = "*"
async-trait = "0.1.75"
thiserror = "1.0.23"
openssl = { version = "0.10.62", features = ["vendored"] }
lazy_static = "1.4.0"
printers = "2.0.0"
recibo = { version = "0.3.0", features = ["graphics"] }

