[package]
name = "facturador_appserver"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "*",features = ["json"]}
chrono = { version = "*", features = ["serde", "rustc-serialize"] }
rocket_db_pools = { version = "*", features = ["sqlx_postgres"] }
reqwest = {version = "*", features = ["json"] }
yaserde = "*"
yaserde_derive = "*"
log = "*"
async-trait = "0.1.75"
thiserror = "1.0.23"
openssl = { version = "0.10.62", features = ["vendored"] }
lazy_static = "1.4.0"
rand = "0.8.5"
config = "0.13.4"
sqlx = { version = "0.7.3", features = ["chrono", "bigdecimal"] }
rocket_cors = "0.6.0"
escposify = { version = "0.5.2" }
image = "0.24.7"
qrcode = "0.13.0"
textwrap = "0.16.0"
serde_json = "1.0.110"
base64 = "0.21.5"
tempfile = "3.9.0"
local-ip-address = "0.5.6"
